# diff-assert

./: .gitignore  Cargo.toml  LICENSE  README.md  README.md2  README.tpl  renovate.json
.github/workflows/: lint.yml
.hooks/: pre-commit  pre-push
diff-utils/: Cargo.toml  README.md  README.tpl
diff-utils/src/: context.rs  display.rs  hunk.rs  lib.rs  line.rs  patch.rs  processor.rs
diff-utils/src/display/: compare_result.rs  hunk.rs  line.rs  line_diff.rs  mod.rs  options.rs
diff-utils/src/snapshots/: diff_utils__tests__bad_diff__test___test_1.snap  diff_utils__tests__bad_diff__test___test_3.snap  diff_utils__tests__bad_diff__test___test_4.snap  diff_utils__tests__bad_diff_test___concat_1_n2_n3_n4_n_foo_n_1_n2_n3_n4_n_bar_n_1_n2_n3_n4_n_concat_1_n2_n3_n4_n_fou_n_1_n2_n3_n4_n_baz_n_1_n2_n3_n4_n_.snap  diff_utils__tests__bad_diff_test___nlorem_n_n_nipsum_n1_n2_n3_n4_n_nlorem_n_n_nipsun_n1_n2_n3_n4_n_.snap  diff_utils__tests__bad_diff_test___nlorem_n_n_nipsum_n1_n2_n3_n_nlorem_n_n_nipsun_n1_n2_n3_n_.snap  diff_utils__tests__bad_diff_test___nlorem_n_n_nipsum_n1_n_nlorem_n_n_nipsun_n1_n_.snap  diff_utils__tests__diff_hunks__test___test_1.snap  diff_utils__tests__diff_hunks__test___test_2.snap  diff_utils__tests__diff_hunks__test___test_3.snap  diff_utils__tests__test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g_.snap  diff_utils__tests__test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g_n1_2_3_.snap
diff-utils/tests/: patch.rs
diff-utils/tests/001-patch/: test.ion.ast.actual  test.ion.ast.expected
diff-utils/tests/002-patch-simple/: test.txt.actual  test.txt.expected
diff-utils/tests/003-patch-neighbour/: test.txt.actual  test.txt.expected
diff-utils/tests/004-patch-truncate-unchanged/: test.ion.ast.actual  test.txt.expected
scripts/: publish.sh  readme.sh
src/: diff.rs  lib.rs
src/diff/: hunk.rs  line.rs  mod.rs  processor.rs
src/snapshots/: bad_diff_test___concat_1_n2_n3_n4_n_foo_n_1_n2_n3_n4_n_bar_n_1_n2_n3_n4_n_concat_1_n2_n3_n4_n_fou_n_1_n2_n3_n4_n_baz_n_1_n2_n3_n4_n.snap  bad_diff_test___nlorem_n_n_nipsum_n1_n2_n3_n_nlorem_n_n_nipsun_n1_n2_n3_n.snap  bad_diff_test___nlorem_n_n_nipsum_n1_n_nlorem_n_n_nipsun_n1_n.snap  test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g.snap  test_diff_hunks___a_b_c_nd_e_f_a_b_d_ne_f_g_n1_2_3.snap  (+1 more)
tests/data/diff_dir/different_file/: readme.md
(+4 files in other folders)
