[package]
name = "diff_assert"
version = "1.0.0-pre1"
authors = ["Wojciech Polak <wojciech.polak@anixe.pl>"]
edition = "2018"
description = "Macros library for colored diffs in assertions"
license = "MIT"
readme = "README.md"
repository = "https://github.com/anixe/diff-assert"


[badges]
maintenance = { status = "actively-developed" }

[workspace]
members = ["diff-utils"]

[dependencies]
diff_utils = { path = "./diff-utils", features = ["display"] }
walkdir = { version = "2", optional = true }

[features]
# enables/disables dir assert_diff_dir
dir_assert = ["walkdir"]
default = ["dir_assert"]
