[package]
name = "diff_utils"
version = "0.1.0"
authors = ["Wojciech Polak <frondeus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
display = [ "colored" ]
patch = [ "chrono" ]

[dependencies]
diffs = "0.4.0"
itertools = "0.9.0"

colored = { version = "1.9.3", optional = true }
chrono = { version = "0.4.11", optional = true }

[dev-dependencies]
test-case = "1.0.0"
insta = "0.16.0"
